# Trajektorienplanung

./: CMakeLists.txt  README.md  hochzeit.launch  package.xml
include/hochzeit/: ellipse.h  init_leader.h  trajec.h  utility_hochzeit.h
include/hochzeit/Regler/: P2P_controller.h  linDinOut.h
include/hochzeit/Trajektorienberechnung/: circle.h  ellipse.h  line.h  trajec.h  utility.h
src/: P2P_controller.cpp  ellipse.cpp  hochzeit.cpp  hochzeit_follower.code-workspace  hochzeit_follower_new.code-workspace  init.cpp  init_leader.cpp  leader_move_node.cpp  li_controller.cpp  linDinOut.cpp  trajec.cpp  utility_hochzeit.cpp
src/Regler/: P2P_controller.cpp  linDinOut.cpp
src/Trajektorienberechnung/: circle.cpp  ellipse.cpp  line.cpp  utility.cpp
